# tinyvec

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: chapter-1-similarity-and-search.md
gatekeeper/: __init__.py  backends.py  embed.py  numpy_store.py  store.py
tests/: test_bedrock.py  test_distance.py  test_embed.py  test_numpy_store.py  test_store.py
tinyvec/: __init__.py  distance.py  embed.py  numpy_store.py  store.py
